--- a/LMessage/LMessage/Base.lproj/Main.storyboard
+++ b/LMessage/LMessage/Base.lproj/Main.storyboard
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="NuE-3x-Pc5">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="yOg-Hs-ApM">
+            <objects>
+                <navigationController navigationBarHidden="YES" id="NuE-3x-Pc5" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kGQ-Qi-nhh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="a3O-kY-Y32"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Loc-jV-14P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1117.5" y="200.5"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -19,22 +37,81 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="global_img_navbg" translatesAutoresizingMaskIntoConstraints="NO" id="wTK-A4-bQd">
                                 <rect key="frame" x="0.0" y="0.0" width="376" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="ERF-gP-ukh"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="TAd-nq-xPp"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="ERF-gP-ukh"/>
+                                        <exclude reference="TAd-nq-xPp"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="376" height="64"/>
+                                    <mask key="constraints">
+                                        <include reference="ERF-gP-ukh"/>
+                                        <include reference="TAd-nq-xPp"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hev-RT-gOC">
                                 <rect key="frame" x="283" y="20" width="90" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="NMj-cC-vQ6"/>
+                                    <constraint firstAttribute="height" constant="44" id="wIW-WS-vPF"/>
+                                </constraints>
                                 <state key="normal" title="历史纪录"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="NMj-cC-vQ6"/>
+                                        <exclude reference="wIW-WS-vPF"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular">
+                                    <mask key="constraints">
+                                        <include reference="NMj-cC-vQ6"/>
+                                        <include reference="wIW-WS-vPF"/>
+                                    </mask>
+                                </variation>
                                 <connections>
-                                    <segue destination="uBN-CR-HEZ" kind="presentation" id="r8g-DE-V5K"/>
+                                    <segue destination="uBN-CR-HEZ" kind="show" id="gWo-2c-JFS"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="wTK-A4-bQd" secondAttribute="trailing" id="ASV-pL-08h"/>
+                            <constraint firstItem="wTK-A4-bQd" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="Amn-Pc-HrL"/>
+                            <constraint firstItem="wTK-A4-bQd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="KQZ-ja-QD2"/>
+                            <constraint firstItem="wTK-A4-bQd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="RpD-Wo-1z1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wTK-A4-bQd" secondAttribute="trailing" id="g4E-4g-ygf"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ASV-pL-08h"/>
+                                <exclude reference="Amn-Pc-HrL"/>
+                                <exclude reference="KQZ-ja-QD2"/>
+                                <exclude reference="RpD-Wo-1z1"/>
+                                <exclude reference="g4E-4g-ygf"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular">
+                            <mask key="constraints">
+                                <include reference="ASV-pL-08h"/>
+                                <include reference="Amn-Pc-HrL"/>
+                                <include reference="KQZ-ja-QD2"/>
+                                <include reference="RpD-Wo-1z1"/>
+                                <include reference="g4E-4g-ygf"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="k5W-p7-6JV"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="163.5" y="361.5"/>
+            <point key="canvasLocation" x="-634.5" y="199.125"/>
         </scene>
         <!--History View Controller-->
         <scene sceneID="wvw-R6-Tdu">
@@ -50,6 +127,9 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="global_img_navbg" translatesAutoresizingMaskIntoConstraints="NO" id="Poo-mS-2eN">
                                 <rect key="frame" x="0.0" y="0.0" width="376" height="64"/>
+                                <variation key="heightClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="-1" y="0.0" width="376" height="64"/>
+                                </variation>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VY4-Uw-rZt">
                                 <rect key="frame" x="25" y="19" width="46" height="30"/>
@@ -58,6 +138,24 @@
                                     <action selector="backButtonActon:" destination="uBN-CR-HEZ" eventType="touchUpInside" id="pGH-xa-Ha0"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="218" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="l78-fm-u2V">
+                                <rect key="frame" x="3" y="63" width="374" height="604"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="218" id="4wN-qy-YlL">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="218"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4wN-qy-YlL" id="edt-MD-I8l">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="217"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="uBN-CR-HEZ" id="Gox-RA-HMF"/>
+                                    <outlet property="delegate" destination="uBN-CR-HEZ" id="Vbl-Z2-4vf"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -65,7 +163,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fP6-pY-5R5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="637.5" y="364.5"/>
+            <point key="canvasLocation" x="-138.5" y="198.5"/>
         </scene>
     </scenes>
     <resources>
